from sqlalchemy.orm import DeclarativeBase


class Base(DeclarativeBase):
    """Базовый declarative-класс SQLAlchemy для всех ORM-моделей."""
    pass

